# advent2023

./: Cargo.toml  README.md
src/: main.rs
src/advent/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
src/util/: conversions.rs  io.rs  mod.rs
