[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
argparse = "*"
itertools = "0.9"
lazy_static = "*"
regex = "*"
strum = { version = "0.25", features = ["derive"] }
